# CMakeTemplate

./: .gitignore  LICENSE  README.md
code/: CMakeLists.txt
code/src/: CMakeLists.txt
code/src/app/: CMakeLists.txt
code/src/app/cli/: CMakeLists.txt
code/src/app/cli/src/: example_cli.cpp
code/src/app/src/: example_executable.cpp
code/src/app/ui/: CMakeLists.txt
code/src/app/ui/frameworks/: MacOSXBundleInfo.plist.in  logo.ai  logo.icns
code/src/app/ui/resources/: application_resources.qrc  application_style.qss
code/src/app/ui/src/: MainWindow.cpp  MainWindow.h  main.cpp
code/src/app/ui/ui/: mainwindow.ui
documentation/: Readme.md  cmake-structure.ai  logo-cmake-github.ai
